<resources>
    <string name="app_name">Lead Management</string>
    <string name="title_activity_home">MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="navigation_drawer_pic">Profile Image</string>
    <string name="navigation_drawer_name">C0d3rThomas</string>
    <string name="navigation_drawer_email">gci@jboss-outreach.com</string>

    <string name="action_settings">Settings</string>
    <string name="action_save">SAVE</string>

    <string name="other_options">Other</string>

    <string name="title_contacts">Contacts</string>
    <string name="title_groups">Groups</string>
    <string name="name">Name</string>
    <string name="phone">Phone</string>


    <string name="title_add_contact">Add Contact</string>
    <string name="title_edit_contact">Edit Contact</string>

    <string name="contact_add">Add Contact</string>
    <string name="contact_edit">Edit Contact</string>

    <string name="serverLocation">Server Location</string>
    <string name="saved_server_ip">SERVER_IP</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="deleteWarning">Are you sure you want to delete this contact?</string>
    <string name="search">Search contact</string>
    <string name="import_contacts">Import contacts</string>
    <string name="no_results">No Result Found</string>

    <string name="web_client_ID">887620499347-paca7hemq8m3kjmm3jne3q1mplqg7u17.apps.googleusercontent.com</string>
    <string name="authentication_fail">Failed To Authenticate, Please try again</string>
    <string name="loadingText">Signing In...</string>
    <string name="sign_out_success"> Signed Out Successfully</string>
    <string name="signIn">Sign In With Google</string>
    <string name="signOut">Sign Out</string>
    <string name="name_placeholder">Not Signed In</string>
    <string name="email_placeholder">Please sign in to continue</string>
    <string name="confirm_sign_out">Are you sure you want to sign out?</string>
    <string name="welcome_string">Welcome to Lead Management</string>
    <string name="success">Success</string>


</resources>
