<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single"
        android:id="@+id/top_pane">
        <item
            android:id="@+id/nav_contacts"
            android:icon="@drawable/ic_menu_contacts"
            android:title="@string/title_contacts" />
        <item
            android:id="@+id/nav_groups"
            android:icon="@drawable/ic_menu_group"
            android:title="@string/title_groups" />
    </group>

    <group android:checkableBehavior="none"
        android:id="@+id/bottom_pane">
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings_black_24dp"
            android:title="@string/action_settings"/>
        <item
            android:id="@+id/nav_sign_in"
            android:icon="@drawable/ic_signin"
            android:title="@string/signIn"/>
        <item
            android:id="@+id/nav_sign_out"
            android:icon="@drawable/ic_logout"
            android:title="@string/signOut"
            android:visible="false"/>

    </group>
</menu>
